<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ararobo_lidar_merger</name>
  <version>0.0.0</version>
  <description>ROS2 node to integrate multiple LiDAR data into a single /scan topic.</description>
  <maintainer email="m24366@g.metro-cit.ac.jp">lambda</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>laser_geometry</depend> <depend>message_filters</depend> <depend>pcl_conversions</depend> <depend>pcl_ros</depend> <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
